Closed
Bug 226149
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for ctl files
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
3.09 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsULE.cpp&rev=1.5&mark=117#112 Deref-error:
"tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsULE.cpp&rev=1.5&mark=132#127 Deref-error:
"tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsULE.cpp&rev=1.5&mark=142#137 Deref-error:
"tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsULE.cpp&rev=1.5&mark=145#140 Deref-error:
"tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToSunIndic.cpp&rev=1.4&mark=53#48 D
eref-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToSunIndic.cpp&rev=1.4&mark=63#58 D
eref-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToSunIndic.cpp&rev=1.4&mark=71#66 D
eref-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToSunIndic.cpp&rev=1.4&mark=74#69 D
eref-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToTIS620.cpp&rev=1.6&mark=63#58 Der
ef-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToTIS620.cpp&rev=1.6&mark=73#68 Der
ef-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToTIS620.cpp&rev=1.6&mark=81#76 Der
ef-error: "tmpChunk"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/intl/ctl/src/nsUnicodeToTIS620.cpp&rev=1.6&mark=84#79 Der
ef-error: "tmpChunk"
Attachment #135883 -
Flags: superreview?(roc)
Attachment #135883 -
Flags: review?(roc)
Attachment #135883 -
Flags: superreview?(roc)
Attachment #135883 -
Flags: superreview+
Attachment #135883 -
Flags: review?(roc)
Attachment #135883 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: Layout: CTL → Layout: Text
QA Contact: arthit → layout.fonts-and-text
You need to log in
before you can comment on or make changes to this bug.
Description
•