Bug 226149 DRefTool analysis for ctl files r=roc sr=roc